tests/compile_fail/fn-arg-empty.stderr
error: expected self
 --> $DIR/fn-arg-empty.rs:7:11
  |
7 |     fn len() -> usize;
  |           ^^
